[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asb-cloud-api"
version = "0.1.0"
description = "FastAPI service for browser-backed scraping with session, proxy, usage, and billing primitives."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "ASB Cloud API contributors" }
]
keywords = ["fastapi", "playwright", "scraping", "browser-automation", "proxy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "playwright>=1.50.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.2",
  "cryptography>=44.0.0",
  "httpx>=0.28.0",
  "asyncpg>=0.30.0",
  "psycopg2-binary>=2.9.10",
  "stripe>=8.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.urls]
Homepage = "https://github.com/shanewas/asb-cloud-api"
Issues = "https://github.com/shanewas/asb-cloud-api/issues"
Documentation = "https://github.com/shanewas/asb-cloud-api#readme"

[tool.setuptools.packages.find]
include = ["asb_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
