[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asb-cli"
version = "0.1.0"
description = "Small CLI for ASB Cloud API smoke testing and local workflows (scrape, sessions, usage, billing)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ASB Cloud API contributors" }]
keywords = ["asb", "cli", "scraping", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities"
]
dependencies = [
  "asb-cloud-client>=0.1.0"
]

[project.scripts]
asb = "asb_cli.cli:main"

[project.urls]
Homepage = "https://github.com/shanewas/asb-cloud-api/tree/master/clients/cli"

[tool.setuptools.packages.find]
include = ["asb_cli*"]
